<resources>
    <string name="app_name">我的相册</string>
    <string name="app_pager_title_photo">照片</string>
    <string name="app_pager_title_album">相册</string>
    <string name="app_external_storage_device_unmounted">设备的外部存储设备未挂载</string>
    <string name="app_permission_request_external_storage_access">我的相册需要系统授权外部存储设备的访问权限，请允许</string>
    <string name="app_permission_request_external_storage_access_deny_msg">我的相册需要系统授权外部存储设备的访问权限，请在设置-应用管理-我的相册中开启</string>
    <string name="app_error_arguments">参数错误:%s</string>
    <string name="app_bucket_photo_count">%d张照片</string>

    <string name="app_photo_sort_by_datetime">时间</string>
    <string name="app_photo_sort_by_size">大小</string>
    <string name="app_photo_sort_by_name">名称</string>

    <string name="app_photo_delete">删除</string>
    <string name="app_photo_edit">编辑</string>
    <string name="app_photo_menu">菜单</string>

    <string name="app_photo_dialog_confirm_context">是否删除所选文件</string>
    <string name="app_photo_delete_fail">删除失败</string>

    <string name="app_photo_info_iso">ISO: %s</string>
    <string name="app_photo_info_s">S: %s</string>
    <string name="app_photo_info_ev">EV: %s</string>
    <string name="app_photo_info_f">F: %s</string>
    <string name="app_photo_info_focal_length">焦距: %s</string>
    <string name="app_photo_info_camera_model">型号: %s</string>
    <string name="app_photo_info_address">地点: %s</string>
    <string name="app_photo_info_path">路径: %s</string>
    <string name="app_photo_info_size">文件大小: %s</string>

    <string name="app_bottom_menu_bucket_create">新建相册</string>
    <string name="app_bottom_menu_menu">菜单</string>
    <string name="app_bucket_name_null">相册名称不能为空</string>
    <string name="app_bucket_create_success">创建相册成功</string>
    <string name="app_bucket_create_fail">创建相册失败</string>
    <string name="app_bucket_empty">没有照片</string>

    <string name="app_operation_bar_title">已选择(%d)</string>

    <string name="app_operation_menu_item_share">分享</string>
    <string name="app_operation_menu_item_move_into">移入</string>
    <string name="app_operation_menu_item_delete">删除</string>
    <string name="app_operation_menu_item_select_all">全选</string>
    <string name="app_operation_menu_item_menu">菜单</string>
</resources>
